# xkcd-utils

./: Cargo.toml  README.md
src/: comic.rs  explain.rs  xkcd_regex.rs
