[package]
name = "xkcd-utils"
version = "0.1.4"
authors = ["Mason Ginter <mason@dagint.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Utility crate for getting xkcd and explainxkcd entries"
readme = "README.md"
repository = "https://github.com/Hpmason/xkcd-utils"
keywords = ["xkcd"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
serenity = "0.11"
tokio = {version = "1.25.0", features = ["rt-multi-thread", "macros"]}
async-trait = "0.1.64"
reqwest = {version = "0.11.14", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
regex = "1.7"
lazy_static = "1.4"
